syntax = "proto3";

option csharp_namespace = "AuthenticationService";

package auth;

service AuthService {
  rpc AuthenticateUser (LoginRequest) returns (TokenResponse);
  rpc AuthenticateToken (TokenRequest) returns (TokenResponse);
  rpc GetUser (TokenRequest) returns (UserResponse);
}

message LoginRequest {
  string email = 1;
  string hashed_password = 2;
}

message TokenResponse {
  string token = 1;
}

message TokenRequest {
  string token = 1;
}

message UserResponse {
	int32 id = 1;
	bool found = 2;
}